--- a/views/submitWork.html
+++ b/views/submitWork.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iBrand</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <header>
@@ -14,10 +16,18 @@
                 <div class="logo"><img src="img/tea11.png" alt="logo"></div>
                 <h1 id="nav_name">iBrand</h1>
             </div>
+            
             <div class="space_generator"></div>
             <ul class="menu_items">
                 <li> <a href="./">Home</a></li>
+                <li> <a href="./#what_we_do">What We Do</a></li>
+                <li> <a href="./#our_plans">Our Plans</a></li>
+                <li> <a href="/create">Create</a></li>
+                <li> <a href="">About us</a></li>
             </ul>
+            <div class="ham_icon">
+                <i class="fa fa-bars"></i>
+            </div>
         </div>
     </header>
 
@@ -46,3 +56,22 @@
             </div>          
         </div>
     </main>
+
+    <footer>
+        <div class="footer_container">
+            <ul>
+                <li> <a href="">Contact Us</a> </li>
+                <li> <a href="">Social Media</a> </li>
+                <li> <a href=""></a>Links</li>
+            </ul>
+            <ul>
+                <li> <a href="">Jobs</a> </li>
+                <li> <a href="">Terms and Conditions</a> </li>
+                <li> <a href=""></a>Media</li>
+            </ul>
+        </div>
+    </footer>
+
+    <script src="functions.js"></script>
+</body>
+</html>
